# fastapi-library

./: .dockerignore  .env-docker  .env-test  .env.example  .gitignore  Dockerfile  README.md  compose.yml  docker-compose.local-tests.yml  docker-compose.yml  pyproject.toml  spec.md
src/: config.py  server.py
src/application/schemas/: author.py  book.py  token.py  user.py
src/application/services/: author.py  book.py  token.py  user.py
src/domain/models/: author.py  book.py  book_user.py  genre.py  role.py  user.py
src/domain/repositories/: author.py  book.py  token.py  user.py
src/infrastructure/: database.py
src/presentation/: controllers.py  dependencies.py  exceptions.py
src/presentation/http/: author.py  book.py  user.py
src/presentation/http/auth/: controller.py
src/utils/: exceptions.py
src/utils/auth/: password.py  token.py
tests/: conftest.py
tests/fixtures/: author.py  book.py  user.py
tests/integration/: test_author.py  test_book.py  test_user.py
tests/schemas/: auth.py  author.py  book.py
tests/unit/: test_auth.py
