[tool.poetry]
name = "fastapi-library"
version = "0.1.0"
description = "RESTful API for library"
authors = ["darialissi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.7"}
pydantic-settings = "^2.7.1"
advanced-alchemy = "^0.30.2"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
bcrypt = "^4.2.1"
asyncpg = "^0.30.0"
redis = "^5.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8-pyproject = "^1.2.3"
pytest-asyncio = "^0.25.2"
pytest-dotenv = "^0.5.2"

[tool.pytest.ini_options]
env_override_existing_values = 1
env_files = [".env-test"]
pythonpath = [".", "src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = ["ignore::UserWarning"]
markers = [  
    "integration: mark a test as an integration test",   
    "unit: mark a test as a unit test",      
    "admin: mark a test as an admin test",    
    "reader: mark a test as a reader test",                 
] 

[tool.black]
line-length = 90
target_version = ["py311"]

[tool.isort]
profile = "black"
py_version = 311

[tool.flake8]
ignore = ['E501']


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
